tests/ui/typeck/suggestions/sugg-swap-equality-in-macro-issue-139050.stderr
error[E0412]: cannot find type `Item` in this scope
  --> $DIR/sugg-swap-equality-in-macro-issue-139050.rs:8:5
   |
LL |     Item: Eq + Debug,
   |     ^^^^ not found in this scope

error[E0308]: mismatched types
  --> $DIR/sugg-swap-equality-in-macro-issue-139050.rs:10:35
   |
LL |     debug_assert_eq!(iter.next(), Some(value));
   |                                   ^^^^^^^^^^^ expected `Option<<I as Iterator>::Item>`, found `Option<&<I as Iterator>::Item>`
   |
   = note: expected enum `Option<_>`
              found enum `Option<&_>`

error[E0308]: mismatched types
  --> $DIR/sugg-swap-equality-in-macro-issue-139050.rs:11:29
   |
LL |     assert_eq!(iter.next(), Some(value));
   |                             ^^^^^^^^^^^ expected `Option<<I as Iterator>::Item>`, found `Option<&<I as Iterator>::Item>`
   |
   = note: expected enum `Option<_>`
              found enum `Option<&_>`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0308, E0412.
For more information about an error, try `rustc --explain E0308`.
